load("//:defs.bzl", "demo_flow")
load("//:gallery.bzl", "demo_gallery_image", "demo_stage_images")

demo_flow(
    name = "CPU",
    arguments = {
        # --- Synthesis ---
        "SYNTH_HIERARCHICAL": "1",
        "SYNTH_MINIMUM_KEEP_SIZE": "0",
        # --- Floorplan & Placement ---
        "CORE_UTILIZATION": "40",
        "PLACE_DENSITY": "0.65",
        # --- Speed defaults (remove to improve QoR) ---
        "GPL_ROUTABILITY_DRIVEN": "0",
        "GPL_TIMING_DRIVEN": "0",
        "SKIP_CTS_REPAIR_TIMING": "1",
        "SKIP_INCREMENTAL_REPAIR": "1",
        "SKIP_LAST_GASP": "1",
        "FILL_CELLS": "",
        "TAPCELL_TCL": "",
    },
    sources = {
        "SDC_FILE": [":constraints.sdc"],
    },
    verilog_files = ["@genben//:rtl"],
)

demo_gallery_image(
    name = "CPU_gallery",
    src = ":CPU_place",
)

demo_stage_images(
    name = "CPU_images",
    module = "CPU",
    stages = [
        "floorplan",
        "place",
        "cts",
        "route",
    ],
)
